# pagewright

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  conversion_bug.yml  privacy_sensitive_report.yml  proof_demo_regression.yml  release_review.yml
.github/workflows/: ci.yml
app/: README.md
app/pdf_forge_api/: __init__.py  demo.py  main.py  models.py  storage.py
app/pdf_forge_api/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  COMMIT_READINESS.md  PRODUCT_UI.md  PROJECT_MAP.md  PUBLIC_PROOF.md  RELEASE_READINESS.md  RELEASE_REVIEW_OUTCOME_TEMPLATE.md  ROADMAP.md
engine/pdf_forge/: __init__.py  cli.py  operations.py
examples/: check_public_readiness.py  check_synthetic_proof.py  generate_release_review_outcome.py  run_release_review_dry_run.py  smoke_recovery.py  synthetic_proof.py
scripts/: start_pagewright.ps1
tests/: test_api.py  test_operations.py  test_storage.py
